Fix all PMD violations